# shorkie-paper

./: .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  README.md  environment.yml  pyproject.toml
config/: paths.example.yaml  slurm.example.yaml
containers/: Dockerfile  apptainer.def
data/: README.md  download.sh  manifest.json
data/R64_annotations/: assembly_gaps.bed  chrom.sizes
data/species_lists/: .gitkeep  README.md  species_fungi_1385_gtf.cleaned.csv  species_r64_gtf.cleaned.csv  species_saccharomycetales_gtf.cleaned.csv  species_strains_gtf.cleaned.csv
examples/: 1_lm_load_and_inference.ipynb  2_lm_embeddings.ipynb  3_shorkie_load_and_predict.ipynb  4_shorkie_variant_effect.ipynb  5_finetune_lm_on_rnaseq.sh  README.md
minimal_example/: README.md  params.json  run_example.sh  run_shorkie_variant.py  sheet.txt
minimal_example/logs/: run_example.err  run_example.out
model/shorkie/: README.md  make_model.sh
model/shorkie_lm/: README.md  train.sh
notebooks/: README.md  fig01_lm_architecture.ipynb  fig02_lm_genome_eval.ipynb  fig03_lm_motifs.ipynb  fig04_cross_species_motifs.ipynb  fig05_promoter_umap.ipynb  fig06_attention_map.ipynb  fig07_eqtl_variant_effects.ipynb  fig07_smt3_dependency.ipynb  fig08_track_prediction.ipynb  fig09_track_eval_metrics.ipynb  fig10_variant_effect_logSED.ipynb  fig11_eqtl_benchmark.ipynb  fig12_mpra_benchmark.ipynb  fig13_ism_motifs.ipynb  fig14_ablations.ipynb
reproduction/: AUDIT_MATRIX.md  README.md  VERIFICATION_REPORT.md
reproduction/common/: compare.py  (+3 more)
scripts/: README.md
tests/: test_smoke.py
(+970 files in other folders)
