[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shorkie"
version = "0.1.0"
description = "Shared library and path configuration for reproducing the Shorkie paper analyses"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Kuan-Hao Chao", email = "kuanhao.chao@gmail.com" },
]
# Heavy numerical/genomics deps (tensorflow, pysam, pybedtools, ...) come from
# environment.yml + the baskerville-yeast submodule; keep this list minimal so
# `pip install -e .` is light and import of shorkie.config always works.
dependencies = [
    "pyyaml>=6.0",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest>=7", "black>=23", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/calico/shorkie-paper"

[tool.setuptools.packages.find]
where = ["src"]
